--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "abstract-syntax-tree": "^2.22.0",
     "js-tokens": "^9.0.0"
   }
 }
